--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,29 @@
-@tailwind base;
+/* @tailwind base;
 @tailwind components;
-@tailwind utilities;
+@tailwind utilities; */
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+main {
+    padding: 1rem 1rem 5rem;
+}
+
+ul {
+    list-style: none;
+}
+
+button {
+    height: 3rem;
+    width: 3rem;
+    padding: 0.25rem;
+    border: none;
+    border-radius: 0.5rem;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
