creacion de registersUserchema

--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,8 @@
-/* @tailwind base;
+@tailwind base;
 @tailwind components;
-@tailwind utilities; */
+@tailwind utilities;
 
-* {
+/* * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -26,4 +26,4 @@ button {
     display: flex;
     justify-content: center;
     align-items: center;
-}
+} */
