--- a/src/index.css
+++ b/src/index.css
@@ -17,3 +17,22 @@ body {
     display: flex;
     flex-direction: column;
 }
+
+/* Barra de scroll */
+/* width */
+::-webkit-scrollbar {
+    width: 5px;
+}
+/* Track */
+::-webkit-scrollbar-track {
+    background: transparent;
+}
+/* Handle */
+::-webkit-scrollbar-thumb {
+    background: rgba(85, 85, 85, 0.198);
+    border-radius: 3px;
+}
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+    background: #555;
+}
