--- a/src/index.css
+++ b/src/index.css
@@ -16,6 +16,10 @@ body {
 #root {
     display: flex;
     flex-direction: column;
+
+    main {
+        flex-grow: 1;
+    }
 }
 
 /* Barra de scroll */
